chore: fix spacing

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -499,7 +499,7 @@ h2.banner__heading.inline-richtext.h1 {
   display: block;
   content: '';
   position: absolute;
-  right: -50px;
+  right: 0;
   top: 0;
   background-image: url('https://cdn.shopify.com/s/files/1/0756/7432/1181/files/Group_228_6ffeb1d4-a07a-47c0-9ae6-8fa1693c21a8.png');
   background-size: contain;
